# ChangeLog for app-admin/eselect-opengl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-opengl/ChangeLog,v 1.132 2015/01/01 12:39:44 mgorny Exp $

  01 Jan 2015; Michał Górny <mgorny@gentoo.org> eselect-opengl-1.3.1.ebuild:
  Add a blocker on incompatible ati-drivers.

  31 Dec 2014; Michał Górny <mgorny@gentoo.org> -eselect-opengl-1.3.0.ebuild:
  Remove the buggy intermediate version.

  17 Dec 2014; Michał Górny <mgorny@gentoo.org> eselect-opengl-1.3.0.ebuild,
  eselect-opengl-1.3.1.ebuild:
  Remove correct old file, reported by nE0sIghT.

  10 Dec 2014; Patrick Lauer <patrick@gentoo.org> eselect-opengl-1.2.7.ebuild:
  Fix xorg-server dep

*eselect-opengl-1.3.1 (08 Dec 2014)

  08 Dec 2014; Michał Górny <mgorny@gentoo.org> +eselect-opengl-1.3.1.ebuild,
  eselect-opengl-1.3.0.ebuild:
  Version bump to fix creating xorg.conf.d it if does not exist, reported by
  Jeroen Roovers. Use ${PV} in SRC_URI.

  08 Dec 2014; Matt Turner <mattst88@gentoo.org> eselect-opengl-1.2.7.ebuild:
  Block on mesa-10.3.4-r1 and >=10.3.5-r1

  08 Dec 2014; Matt Turner <mattst88@gentoo.org> eselect-opengl-1.3.0.ebuild:
  Block on mesa-10.3.5. Thanks Arfrever for pointing this out.

*eselect-opengl-1.3.0 (08 Dec 2014)

  08 Dec 2014; Michał Górny <mgorny@gentoo.org> +eselect-opengl-1.3.0.ebuild,
  -eselect-opengl-1.2.1.ebuild, -eselect-opengl-1.2.3.ebuild,
  -eselect-opengl-1.2.4.ebuild, -eselect-opengl-1.2.5-r1.ebuild,
  -eselect-opengl-1.2.6.1.ebuild, -eselect-opengl-1.2.6.ebuild,
  eselect-opengl-1.2.7.ebuild:
  Complete redesign wrt bug #531842. Drop old.

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-opengl-1.2.7.ebuild:
  Stable for sh, wrt bug #463430

  26 May 2013; Agostino Sarubbo <ago@gentoo.org> eselect-opengl-1.2.7.ebuild:
  Stable for ppc, wrt bug #463430

  26 May 2013; Agostino Sarubbo <ago@gentoo.org> eselect-opengl-1.2.7.ebuild:
  Stable for s390, wrt bug #463430
